--- a/game.css
+++ b/game.css
@@ -174,6 +174,15 @@ nav a:hover {
     border-radius: 2px;
 }
 
+button {
+    margin: 5px;
+    margin-top: 5px;
+    text-align: center;
+    font-size: 14px;
+    font-family: 'Courier';
+    border-radius: 10%;
+}
+
 .twitter-share-button, .fb-share-button{
     vertical-align: top;
 }
